--- a/Practice-02(Combined)/myApp/client/package.json
+++ b/Practice-02(Combined)/myApp/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "cleave.js": "^1.6.0",
+    "cogo-toast": "^4.2.3",
     "export-from-json": "^1.7.3",
     "html-to-image": "^1.11.11",
     "localforage": "^1.10.0",
