--- a/E-commerce-01/Backend/.env
+++ b/E-commerce-01/Backend/.env
@@ -1,3 +1,3 @@
-PORT = 3000
+PORT = 5000
 
-MONGODB_ATLAS_URL = "mongodb+srv://sabbir:sabbir5313@cluster0.urhmvii.mongodb.net/E-Com-MERN"
+MONGODB_ATLAS_URL = "mongodb+srv://sabbir:sabbir5313@cluster0.urhmvii.mongodb.net/Ecom-MERN"
