--- a/E-commerce-01/Backend/package.json
+++ b/E-commerce-01/Backend/package.json
@@ -11,11 +11,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.8.0",
     "http-errors": "^2.0.0",
     "mongoose": "^7.4.1",
+    "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
   "devDependencies": {
