--- a/Alumni/client/package.json
+++ b/Alumni/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
