--- a/Login-Registration-with-Authentication_Authorization/server/package.json
+++ b/Login-Registration-with-Authentication_Authorization/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.6.0",
     "nodemon": "^3.0.1"
